removed uikit from project; add bootstrap for simplicity; started implementing basic structure to footer, header and home templates

--- a/src/app/Pages/header/header.component.html
+++ b/src/app/Pages/header/header.component.html
@@ -1,1 +1,7 @@
-<p>header works!</p>
+<header class="sticky-top mb-3">
+    <div class="titles bold italic text-center fs-1">
+        <a class="text-reset text-decoration-none" routerLink="home">
+            Half Life
+        </a>
+    </div>
+</header>
