--- a/src/app/Pages/footer/footer.component.html
+++ b/src/app/Pages/footer/footer.component.html
@@ -1,1 +1,3 @@
-<p>footer works!</p>
+<footer class="subtitles fixed-bottom">
+    <div class="text-center">&copy; All rights reserved</div>
+</footer>
