fixed bootstrap classes not working

--- a/src/app/Pages/header/header.component.html
+++ b/src/app/Pages/header/header.component.html
@@ -1,7 +1,7 @@
-<header class="sticky-top mb-3">
-    <div class="titles bold italic text-center fs-1">
-        <a class="text-reset text-decoration-none" routerLink="home">
-            Half Life
+<header class="fixed-top">
+    <div class="text-center fs-1">
+        <a routerLink="home">
+            <h1 class="titles bold italic">Half Life</h1>
         </a>
     </div>
 </header>
