--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,7 @@
     font-family: "Poppins", system-ui, -apple-system, BlinkMacSystemFont,
         "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
         "Helvetica Neue", sans-serif;
+    background-color: #f1f1f1;
 }
 
 .titles {
@@ -33,4 +34,8 @@
 
 .normal {
     font-style: normal;
+}
+
+.align-center {
+    text-align: center;
 }
