--- a/src/app/Pages/header/header.component.html
+++ b/src/app/Pages/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="fixed-top">
+<header class="sticky-top">
     <div class="text-center fs-1">
         <a routerLink="home">
             <h1 class="titles bold italic">Half Life</h1>
