--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -1,1 +1,144 @@
-<div class="container"></div>
+<div class="container pt-5 pb-5 bg-light bg-gradient">
+    <div id="main-div">
+        <h4 class="titles italic bold text-center">Mount your protocol</h4>
+
+        <div class="container">
+            <div class="row pt-4 ms-5 me-5 text-start">
+                <p class="subtitles">
+                    <label for="drug-name">Drug name</label>
+                </p>
+                <div class="container">
+                    <div
+                        class="row justify-content-between border-bottom border-dark-subtle"
+                    >
+                        <div class="align-self-start">
+                            <input
+                                class="col-12"
+                                type="text"
+                                name="drug-name"
+                                placeholder="e.g. Aspirin"
+                            />
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row pt-4 ms-5 me-5 text-start">
+                <p class="subtitles">
+                    <label for="drug-name">Dosage</label>
+                </p>
+                <div class="container">
+                    <div
+                        class="row justify-content-between border-bottom border-dark-subtle"
+                    >
+                        <div class="col-6 align-self-start">
+                            <input
+                                class="col-12"
+                                type="text"
+                                name="drug-dosage"
+                                placeholder="e.g. 100"
+                            />
+                        </div>
+                        <div class="col-6 align-self-end text-end">
+                            <select>
+                                <option value="">mg</option>
+                                <option value="">mcg</option>
+                                <option value="">g</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row pt-4 ms-5 me-5 text-start">
+                <p class="subtitles">
+                    <label for="drug-name">Half life</label>
+                </p>
+                <div class="container">
+                    <div
+                        class="row justify-content-between border-bottom border-dark-subtle"
+                    >
+                        <div class="col-6 align-self-start">
+                            <input
+                                class="col-12"
+                                type="text"
+                                name="drug-halflife"
+                                placeholder="e.g. 2"
+                            />
+                        </div>
+                        <div class="col-6 align-self-end text-end">
+                            <select>
+                                <option value="">hour(s)</option>
+                                <option value="">day(s)</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row pt-4 ms-5 me-5 text-start">
+                <p class="subtitles">
+                    <label for="drug-name">Interval between applications</label>
+                </p>
+                <div class="container">
+                    <div
+                        class="row justify-content-between border-bottom border-dark-subtle"
+                    >
+                        <div class="col-6 align-self-start">
+                            <input
+                                class="col-12"
+                                type="text"
+                                name="drug-interval"
+                                placeholder="e.g. 7"
+                            />
+                        </div>
+                        <div class="col-6 align-self-end text-end">
+                            <select>
+                                <option value="">hour(s)</option>
+                                <option value="">day(s)</option>
+                                <option value="">week(s)</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row pt-4 ms-5 me-5 text-start">
+                <p class="subtitles">
+                    <label for="drug-name">Duration of drug in protocol</label>
+                </p>
+                <div class="container">
+                    <div
+                        class="row justify-content-between border-bottom border-dark-subtle"
+                    >
+                        <div class="col-6 align-self-start">
+                            <input
+                                class="col-12"
+                                type="text"
+                                name="drug-duration"
+                                placeholder="e.g. 30"
+                            />
+                        </div>
+                        <div class="col-6 align-self-end text-end">
+                            <select>
+                                <option value="">day(s)</option>
+                                <option value="">week(s)</option>
+                                <option value="">month(s)</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="text-center pt-4">
+            <a href="#" class="subtitles text-body-emphasis"
+                >+ Add another drug</a
+            >
+        </div>
+
+        <div class="text-center pt-5">
+            <button class="subtitles light py-2 px-4">Show Results</button>
+        </div>
+    </div>
+</div>
