implemented reactive form in home component; need to adapt everything to support the addition of other drugs to the protocol with FormArray

--- a/src/app/Pages/home/home.component.css
+++ b/src/app/Pages/home/home.component.css
@@ -26,3 +26,15 @@ button {
     color: white;
     border-radius: 0.3em;
 }
+
+/* HOW TO HIDE ARROWS FROM NUMBER INPUT 👇🏻 */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+    -moz-appearance: textfield;
+}
