finalized the form functionality; implemented the form array to add multiple drugs to the protocol; need to implement the drug deletion method and template structure

--- a/src/app/Pages/header/header.component.html
+++ b/src/app/Pages/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="sticky-top">
+<header class="sticky-top bg-white">
     <div class="text-center fs-1">
         <a routerLink="home">
             <h1 class="titles bold italic">Half Life</h1>
