--- a/src/app/Pages/footer/footer.component.html
+++ b/src/app/Pages/footer/footer.component.html
@@ -1,3 +1,3 @@
-<footer class="subtitles fixed-bottom">
+<footer class="subtitles sticky-bottom">
     <div class="text-center">&copy; All rights reserved</div>
 </footer>
