added delete drug button; added spacing between drugs; implemented a method to create a new default blank drug to enhance code reutilization

--- a/src/app/Pages/home/home.component.css
+++ b/src/app/Pages/home/home.component.css
@@ -21,6 +21,10 @@ a {
     color: rgb(163, 151, 146);
 }
 
+i {
+    cursor: pointer;
+}
+
 button {
     background-color: rgb(59, 47, 42);
     color: white;
