--- a/src/app/Pages/footer/footer.component.html
+++ b/src/app/Pages/footer/footer.component.html
@@ -1,3 +1,3 @@
-<footer class="subtitles sticky-bottom">
-    <div class="text-center">&copy; All rights reserved</div>
+<footer class="subtitles bottom-0 pt-3">
+    <div class="text-center my-5">&copy; All rights reserved 2023</div>
 </footer>
