--- a/src/app/Pages/header/header.component.html
+++ b/src/app/Pages/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="sticky-top bg-white">
+<header class="top-0 bg-white">
     <div class="text-center fs-1">
         <a routerLink="home">
             <h1 class="titles bold italic">Half Life</h1>
