removed measures for the sake of simplicity; started implementing the protocol service logic to draw the chart according to what the user sent in the forms;

--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -65,11 +65,7 @@
                                     />
                                 </div>
                                 <div class="col-6 align-self-end text-end">
-                                    <select formControlName="dosage_measure">
-                                        <option>mg</option>
-                                        <option>mcg</option>
-                                        <option>g</option>
-                                    </select>
+                                    <p>mg</p>
                                 </div>
                             </div>
                         </div>
@@ -93,10 +89,7 @@
                                     />
                                 </div>
                                 <div class="col-6 align-self-end text-end">
-                                    <select formControlName="halflife_measure">
-                                        <option>hour(s)</option>
-                                        <option>day(s)</option>
-                                    </select>
+                                    <p>day(s)</p>
                                 </div>
                             </div>
                         </div>
@@ -122,13 +115,7 @@
                                     />
                                 </div>
                                 <div class="col-6 align-self-end text-end">
-                                    <select
-                                        formControlName="application_interval_measure"
-                                    >
-                                        <option>hour(s)</option>
-                                        <option>day(s)</option>
-                                        <option>week(s)</option>
-                                    </select>
+                                    <p>day(s)</p>
                                 </div>
                             </div>
                         </div>
@@ -154,11 +141,7 @@
                                     />
                                 </div>
                                 <div class="col-6 align-self-end text-end">
-                                    <select formControlName="duration_measure">
-                                        <option>day(s)</option>
-                                        <option>week(s)</option>
-                                        <option>month(s)</option>
-                                    </select>
+                                    <p>day(s)</p>
                                 </div>
                             </div>
                         </div>
