tryed to fix the fillDrugsCurves method in protocol service

--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -85,7 +85,7 @@
                                         type="number"
                                         name="drug-halflife"
                                         placeholder="e.g. 2"
-                                        formControlName="halflife"
+                                        formControlName="halfLife"
                                     />
                                 </div>
                                 <div class="col-6 align-self-end text-end">
