completed the implementation of protocol service and the main template structure of the result component; need to adjust only a few aesthetic details

--- a/src/app/Pages/header/header.component.html
+++ b/src/app/Pages/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="top-0 bg-white">
     <div class="text-center fs-1">
-        <a routerLink="home">
+        <a (click)="redirectHome()">
             <h1 class="titles bold italic">Half Life</h1>
         </a>
     </div>
