--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -20,7 +20,7 @@
                             <div class="col position-absolute end-0 pt-3 pe-3">
                                 <i
                                     (click)="deleteDrug(i)"
-                                    class="bi bi-x-square fs-3 text-danger"
+                                    class="bi bi-x-square fs-3 text-danger pointer"
                                 ></i>
                             </div>
                         </div>
