--- a/src/app/Pages/result/result.component.html
+++ b/src/app/Pages/result/result.component.html
@@ -20,14 +20,35 @@
         <div *ngIf="protocol; else noProtocol"></div>
         <ng-template #noProtocol>
             <div class="pt-5 text-center">
-                <p class="subtitles">No drugs in the protocol.</p>
-                <p class="subtitles">
-                    Please, go back to the main page and register some drugs in
-                    your protocol
-                </p>
+                <h5 class="subtitles bold">
+                    There are no drugs in your protocol!
+                </h5>
+                <h5 class="subtitles bold">
+                    Please, go back to the main page and register some drugs
+                </h5>
             </div>
         </ng-template>
 
-        <canvas class="px-5" id="chart"></canvas>
+        <canvas class="px-5 pb-5" id="chart"></canvas>
+
+        <div class="row col px-5 text-start" *ngFor="let drug of drugsInfo">
+            <p>
+                The <span class="bold">"{{ drug.name }}"</span> drug will reach
+                it's peak of
+                <span class="bold">{{ drug.peakConcentration }} mg</span> at the
+                <span class="bold">{{ drug.peakDay }}th day</span>
+            </p>
+        </div>
+
+        <div class="row col px-5 pt-3 text-danger">
+            <h4 class="subtitles bold text-center">Attention</h4>
+            <p class="text-start">
+                Always use this tool under the supervision of your doctor. This
+                should not be followed as a recommendation alone nor an absolute
+                representation of facts. Every body reacts and absorbs different
+                substances in different ways and this is why medical follow-up
+                is essential to treatment's success.
+            </p>
+        </div>
     </div>
 </div>
