--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -1,170 +1,8 @@
-<div class="container pt-5 pb-5 bg-light bg-gradient rounded-5">
-    <h4 class="titles italic bold text-center">Mount your protocol</h4>
-
-    <form
-        [formGroup]="protocolForm"
-        class="form"
-        (submit)="ShowResult()"
-        id="main-div"
+<div class="py-3 w-100 h-100 d-flex aligns-items-center justify-content-center">
+    <div
+        class="p-5 container col-sm-9 rounded-4 shadow-lg"
+        style="max-width: 700px"
     >
-        <ng-container formArrayName="drugs">
-            <ng-container
-                *ngFor="let drugForm of drugs.controls; let i = index"
-            >
-                <div
-                    class="container border border-dark-subtle rounded-5"
-                    [formGroupName]="i"
-                >
-                    <div class="col justify-content-end text-end">
-                        <div class="position-relative">
-                            <div class="col position-absolute end-0 pt-3 pe-3">
-                                <i
-                                    (click)="deleteDrug(i)"
-                                    class="bi bi-x-square fs-3 text-danger pointer"
-                                ></i>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="form-group row pt-4 mx-5 text-start">
-                        <p class="subtitles">
-                            <label for="drug-name">Drug name</label>
-                        </p>
-                        <div class="container">
-                            <div
-                                class="row justify-content-between border-bottom border-dark-subtle"
-                            >
-                                <div class="align-self-start">
-                                    <input
-                                        class="col-12 form-control"
-                                        type="text"
-                                        name="drug-name"
-                                        placeholder="e.g. Aspirin"
-                                        formControlName="name"
-                                    />
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="form-group row pt-4 mx-5 text-start">
-                        <p class="subtitles">
-                            <label for="drug-name">Dosage</label>
-                        </p>
-                        <div class="container">
-                            <div
-                                class="row justify-content-between border-bottom border-dark-subtle"
-                            >
-                                <div class="col-6 align-self-start">
-                                    <input
-                                        class="col-12 form-control"
-                                        type="number"
-                                        name="drug-dosage"
-                                        placeholder="e.g. 100"
-                                        formControlName="dosage"
-                                    />
-                                </div>
-                                <div class="col-6 align-self-end text-end">
-                                    <p>mg</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="form-group row pt-4 mx-5 text-start">
-                        <p class="subtitles">
-                            <label for="drug-name">Half life</label>
-                        </p>
-                        <div class="container">
-                            <div
-                                class="row justify-content-between border-bottom border-dark-subtle"
-                            >
-                                <div class="col-6 align-self-start">
-                                    <input
-                                        class="col-12 form-control"
-                                        type="number"
-                                        name="drug-halflife"
-                                        placeholder="e.g. 2"
-                                        formControlName="halfLife"
-                                    />
-                                </div>
-                                <div class="col-6 align-self-end text-end">
-                                    <p>day(s)</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="form-group row pt-4 mx-5 text-start">
-                        <p class="subtitles">
-                            <label for="drug-name"
-                                >Interval between applications</label
-                            >
-                        </p>
-                        <div class="container">
-                            <div
-                                class="row justify-content-between border-bottom border-dark-subtle"
-                            >
-                                <div class="col-6 align-self-start">
-                                    <input
-                                        class="col-12 form-control"
-                                        type="number"
-                                        name="application_interval"
-                                        placeholder="e.g. 7"
-                                        formControlName="application_interval"
-                                    />
-                                </div>
-                                <div class="col-6 align-self-end text-end">
-                                    <p>day(s)</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="form-group row py-4 mx-5 text-start">
-                        <p class="subtitles">
-                            <label for="drug-name"
-                                >Duration of drug in protocol</label
-                            >
-                        </p>
-                        <div class="container">
-                            <div
-                                class="row justify-content-between border-bottom border-dark-subtle"
-                            >
-                                <div class="col-6 align-self-start">
-                                    <input
-                                        class="col-12 form-control"
-                                        type="number"
-                                        name="duration"
-                                        placeholder="e.g. 30"
-                                        formControlName="duration"
-                                    />
-                                </div>
-                                <div class="col-6 align-self-end text-end">
-                                    <p>day(s)</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="py-2"></div>
-            </ng-container>
-        </ng-container>
-
-        <div class="text-center pt-4">
-            <a (click)="addDrug()" class="subtitles text-body-emphasis"
-                >+ Add another drug</a
-            >
-        </div>
-
-        <div class="text-center pt-5">
-            <button
-                [disabled]="protocolForm.invalid"
-                type="submit"
-                class="subtitles light py-2 px-4"
-            >
-                Show Results
-            </button>
-        </div>
-    </form>
+        <router-outlet></router-outlet>
+    </div>
 </div>
