--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,7 @@
     font-family: "Poppins", system-ui, -apple-system, BlinkMacSystemFont,
         "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
         "Helvetica Neue", sans-serif;
+    margin: 0;
 }
 
 .titles {
@@ -41,4 +42,17 @@
 
 .pointer {
     cursor: pointer;
+}
+
+.link {
+    color: rgb(207, 157, 111);
+    cursor: pointer;
+}
+
+.github {
+    color: rgb(153, 114, 212);
+}
+
+.underline {
+    text-decoration: underline;
 }
